--- a/assets/styles/partials/_defi-intro.scss
+++ b/assets/styles/partials/_defi-intro.scss
@@ -24,7 +24,7 @@
         }
     }
     img {
-        margin-bottom: 2.5rem;
+        margin: 0 auto 2.5rem auto;
         width:60px;
         height: 60px;
         @media (min-width: $large) {
