--- a/assets/styles/partials/_steps.scss
+++ b/assets/styles/partials/_steps.scss
@@ -28,6 +28,7 @@ section.steps {
                 width: 22%;
             }
             img {
+                margin: 0 auto;
                 max-width: 76px;
             }
             p {
